library/src/libqtextformat.h

typedef struct QBrush QBrush;
typedef struct QTextLength QTextLength;
typedef struct QTextTableCellFormat QTextTableCellFormat;
typedef struct QTextTableFormat QTextTableFormat;
QTextTableFormat* QTextTableFormat_new();
bool QTextTableFormat_IsValid(const QTextTableFormat* self);
int QTextTableFormat_Columns(const QTextTableFormat* self);
void QTextTableFormat_SetColumns(QTextTableFormat* self, int columns);
void QTextTableFormat_SetColumnWidthConstraints(QTextTableFormat* self, libqt_list /* of QTextLength* */ constraints);
libqt_list /* of QTextLength* */ QTextTableFormat_ColumnWidthConstraints(const QTextTableFormat* self);
void QTextTableFormat_ClearColumnWidthConstraints(QTextTableFormat* self);
double QTextTableFormat_CellSpacing(const QTextTableFormat* self);
void QTextTableFormat_SetCellSpacing(QTextTableFormat* self, double spacing);
double QTextTableFormat_CellPadding(const QTextTableFormat* self);
void QTextTableFormat_SetCellPadding(QTextTableFormat* self, double padding);
void QTextTableFormat_SetAlignment(QTextTableFormat* self, int alignment);
int QTextTableFormat_Alignment(const QTextTableFormat* self);
void QTextTableFormat_SetHeaderRowCount(QTextTableFormat* self, int count);
int QTextTableFormat_HeaderRowCount(const QTextTableFormat* self);
void QTextTableFormat_SetBorderCollapse(QTextTableFormat* self, bool borderCollapse);
bool QTextTableFormat_BorderCollapse(const QTextTableFormat* self);
QTextTableCellFormat* QTextTableCellFormat_new();
bool QTextTableCellFormat_IsValid(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetTopPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_TopPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBottomPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_BottomPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetLeftPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_LeftPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetRightPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_RightPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetPadding(QTextTableCellFormat* self, double padding);
void QTextTableCellFormat_SetTopBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_TopBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBottomBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_BottomBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetLeftBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_LeftBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetRightBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_RightBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBorder(QTextTableCellFormat* self, double width);
void QTextTableCellFormat_SetTopBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_TopBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBottomBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_BottomBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetLeftBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_LeftBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetRightBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_RightBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBorderStyle(QTextTableCellFormat* self, int style);
void QTextTableCellFormat_SetTopBorderBrush(QTextTableCellFormat* self, QBrush* brush);
QBrush* QTextTableCellFormat_TopBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBottomBorderBrush(QTextTableCellFormat* self, QBrush* brush);
QBrush* QTextTableCellFormat_BottomBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetLeftBorderBrush(QTextTableCellFormat* self, QBrush* brush);
QBrush* QTextTableCellFormat_LeftBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetRightBorderBrush(QTextTableCellFormat* self, QBrush* brush);
QBrush* QTextTableCellFormat_RightBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBorderBrush(QTextTableCellFormat* self, QBrush* brush);