src/libqtextformat.bf

public struct QTextTableFormat
{
	[LinkName("QTextTableFormat_new")]
	public static extern void* QTextTableFormat_new();
	[LinkName("QTextTableFormat_IsValid")]
	public static extern bool QTextTableFormat_IsValid(void* c_this);
	[LinkName("QTextTableFormat_Columns")]
	public static extern int32 QTextTableFormat_Columns(void* c_this);
	[LinkName("QTextTableFormat_SetColumns")]
	public static extern void QTextTableFormat_SetColumns(void* c_this, int32 columns);
	[LinkName("QTextTableFormat_SetColumnWidthConstraints")]
	public static extern void QTextTableFormat_SetColumnWidthConstraints(void* c_this, QTextLength[] constraints);
	[LinkName("QTextTableFormat_ColumnWidthConstraints")]
	public static extern QTextLength[] QTextTableFormat_ColumnWidthConstraints(void* c_this);
	[LinkName("QTextTableFormat_ClearColumnWidthConstraints")]
	public static extern void QTextTableFormat_ClearColumnWidthConstraints(void* c_this);
	[LinkName("QTextTableFormat_CellSpacing")]
	public static extern double QTextTableFormat_CellSpacing(void* c_this);
	[LinkName("QTextTableFormat_SetCellSpacing")]
	public static extern void QTextTableFormat_SetCellSpacing(void* c_this, double spacing);
	[LinkName("QTextTableFormat_CellPadding")]
	public static extern double QTextTableFormat_CellPadding(void* c_this);
	[LinkName("QTextTableFormat_SetCellPadding")]
	public static extern void QTextTableFormat_SetCellPadding(void* c_this, double padding);
	[LinkName("QTextTableFormat_SetAlignment")]
	public static extern void QTextTableFormat_SetAlignment(void* c_this, int64 alignment);
	[LinkName("QTextTableFormat_Alignment")]
	public static extern int64 QTextTableFormat_Alignment(void* c_this);
	[LinkName("QTextTableFormat_SetHeaderRowCount")]
	public static extern void QTextTableFormat_SetHeaderRowCount(void* c_this, int32 count);
	[LinkName("QTextTableFormat_HeaderRowCount")]
	public static extern int32 QTextTableFormat_HeaderRowCount(void* c_this);
	[LinkName("QTextTableFormat_SetBorderCollapse")]
	public static extern void QTextTableFormat_SetBorderCollapse(void* c_this, bool borderCollapse);
	[LinkName("QTextTableFormat_BorderCollapse")]
	public static extern bool QTextTableFormat_BorderCollapse(void* c_this);
}
public struct QTextTableCellFormat
{
	[LinkName("QTextTableCellFormat_new")]
	public static extern void* QTextTableCellFormat_new();
	[LinkName("QTextTableCellFormat_IsValid")]
	public static extern bool QTextTableCellFormat_IsValid(void* c_this);
	[LinkName("QTextTableCellFormat_SetTopPadding")]
	public static extern void QTextTableCellFormat_SetTopPadding(void* c_this, double padding);
	[LinkName("QTextTableCellFormat_TopPadding")]
	public static extern double QTextTableCellFormat_TopPadding(void* c_this);
	[LinkName("QTextTableCellFormat_SetBottomPadding")]
	public static extern void QTextTableCellFormat_SetBottomPadding(void* c_this, double padding);
	[LinkName("QTextTableCellFormat_BottomPadding")]
	public static extern double QTextTableCellFormat_BottomPadding(void* c_this);
	[LinkName("QTextTableCellFormat_SetLeftPadding")]
	public static extern void QTextTableCellFormat_SetLeftPadding(void* c_this, double padding);
	[LinkName("QTextTableCellFormat_LeftPadding")]
	public static extern double QTextTableCellFormat_LeftPadding(void* c_this);
	[LinkName("QTextTableCellFormat_SetRightPadding")]
	public static extern void QTextTableCellFormat_SetRightPadding(void* c_this, double padding);
	[LinkName("QTextTableCellFormat_RightPadding")]
	public static extern double QTextTableCellFormat_RightPadding(void* c_this);
	[LinkName("QTextTableCellFormat_SetPadding")]
	public static extern void QTextTableCellFormat_SetPadding(void* c_this, double padding);
	[LinkName("QTextTableCellFormat_SetTopBorder")]
	public static extern void QTextTableCellFormat_SetTopBorder(void* c_this, double width);
	[LinkName("QTextTableCellFormat_TopBorder")]
	public static extern double QTextTableCellFormat_TopBorder(void* c_this);
	[LinkName("QTextTableCellFormat_SetBottomBorder")]
	public static extern void QTextTableCellFormat_SetBottomBorder(void* c_this, double width);
	[LinkName("QTextTableCellFormat_BottomBorder")]
	public static extern double QTextTableCellFormat_BottomBorder(void* c_this);
	[LinkName("QTextTableCellFormat_SetLeftBorder")]
	public static extern void QTextTableCellFormat_SetLeftBorder(void* c_this, double width);
	[LinkName("QTextTableCellFormat_LeftBorder")]
	public static extern double QTextTableCellFormat_LeftBorder(void* c_this);
	[LinkName("QTextTableCellFormat_SetRightBorder")]
	public static extern void QTextTableCellFormat_SetRightBorder(void* c_this, double width);
	[LinkName("QTextTableCellFormat_RightBorder")]
	public static extern double QTextTableCellFormat_RightBorder(void* c_this);
	[LinkName("QTextTableCellFormat_SetBorder")]
	public static extern void QTextTableCellFormat_SetBorder(void* c_this, double width);
	[LinkName("QTextTableCellFormat_SetTopBorderStyle")]
	public static extern void QTextTableCellFormat_SetTopBorderStyle(void* c_this, int64 style);
	[LinkName("QTextTableCellFormat_TopBorderStyle")]
	public static extern int64 QTextTableCellFormat_TopBorderStyle(void* c_this);
	[LinkName("QTextTableCellFormat_SetBottomBorderStyle")]
	public static extern void QTextTableCellFormat_SetBottomBorderStyle(void* c_this, int64 style);
	[LinkName("QTextTableCellFormat_BottomBorderStyle")]
	public static extern int64 QTextTableCellFormat_BottomBorderStyle(void* c_this);
	[LinkName("QTextTableCellFormat_SetLeftBorderStyle")]
	public static extern void QTextTableCellFormat_SetLeftBorderStyle(void* c_this, int64 style);
	[LinkName("QTextTableCellFormat_LeftBorderStyle")]
	public static extern int64 QTextTableCellFormat_LeftBorderStyle(void* c_this);
	[LinkName("QTextTableCellFormat_SetRightBorderStyle")]
	public static extern void QTextTableCellFormat_SetRightBorderStyle(void* c_this, int64 style);
	[LinkName("QTextTableCellFormat_RightBorderStyle")]
	public static extern int64 QTextTableCellFormat_RightBorderStyle(void* c_this);
	[LinkName("QTextTableCellFormat_SetBorderStyle")]
	public static extern void QTextTableCellFormat_SetBorderStyle(void* c_this, int64 style);
	[LinkName("QTextTableCellFormat_SetTopBorderBrush")]
	public static extern void QTextTableCellFormat_SetTopBorderBrush(void* c_this, QBrush brush);
	[LinkName("QTextTableCellFormat_TopBorderBrush")]
	public static extern QBrush QTextTableCellFormat_TopBorderBrush(void* c_this);
	[LinkName("QTextTableCellFormat_SetBottomBorderBrush")]
	public static extern void QTextTableCellFormat_SetBottomBorderBrush(void* c_this, QBrush brush);
	[LinkName("QTextTableCellFormat_BottomBorderBrush")]
	public static extern QBrush QTextTableCellFormat_BottomBorderBrush(void* c_this);
	[LinkName("QTextTableCellFormat_SetLeftBorderBrush")]
	public static extern void QTextTableCellFormat_SetLeftBorderBrush(void* c_this, QBrush brush);
	[LinkName("QTextTableCellFormat_LeftBorderBrush")]
	public static extern QBrush QTextTableCellFormat_LeftBorderBrush(void* c_this);
	[LinkName("QTextTableCellFormat_SetRightBorderBrush")]
	public static extern void QTextTableCellFormat_SetRightBorderBrush(void* c_this, QBrush brush);
	[LinkName("QTextTableCellFormat_RightBorderBrush")]
	public static extern QBrush QTextTableCellFormat_RightBorderBrush(void* c_this);
	[LinkName("QTextTableCellFormat_SetBorderBrush")]
	public static extern void QTextTableCellFormat_SetBorderBrush(void* c_this, QBrush brush);
}